--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "hbs": "^4.2.0",
+    "node": "^19.1.0",
     "nodemon": "^2.0.20"
   },
-  "devDependencies": {},
   "description": ""
 }
